# sparse_dgp

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: Makefile  api.rst  conf.py  index.rst  install.rst  intro.rst  kernels.rst  layers.rst  models.rst  requirements.txt  usage.rst  utils.rst
dtmgp/examples/: example_bayesian_dtmgp.py  example_bayesian_linear.py  example_laplace_kernel.ipynb  example_sgdesign.ipynb  exmaple_chol_inv.ipynb  main_bayesian_linear.py
dtmgp/experiments/: bayesian_dtmgp.py  bayesian_linear.py
dtmgp/kernels/: kernel.py  laplace_kernel.py
dtmgp/layers/: __init__.py  base_variational_layer.py  conv.py  conv_variational.py  functional.py  linear.py  linear_variational.py  relu.py  tmgp.py  tmgp_variational.py  tmgps.py  tmk.py
dtmgp/models/: __init__.py  dtmgp_add_large.py  mnist_dgp_add_variational.py  mnist_dgp_sg.py  mnist_dgp_sg_variational.py  mnist_dtmgp_add.py  mnist_dtmgp_sg.py  simple_cnn_variational.py  simple_dgp_add_variational.py  simple_dgp_sg_variational.py  simple_dtmgp_add_variational.py  simple_dtmgp_additive_variational.py  simple_dtmgp_sg_variational.py  simple_dtmgp_variational.py  simple_fc_variational.py  simple_tmk_variational.py
dtmgp/utils/: buffer.py
examples/: 0_laplace_kernel.ipynb  1_sgdesign.ipynb  2_chol_inv.ipynb  bayesian_cnn_mnist.py  bayesian_dtmgp.py  bayesian_dtmgp_additive.py  bayesian_dtmgp_sg.py  bayesian_linear.py
examples/cifar/: bayesian_dgp_cifar.py  bayesian_resgp_cifar.py  bayesian_resnet_cifar.py
examples/imgnet/: bayesian_resnet_imgnet.py
(+70 files in other folders)
